add gae examples

--- a/src/gae/static/default_error.html
+++ b/src/gae/static/default_error.html
@@ -1,14 +1,13 @@
 <!doctype html>
 <html>
 <head>
-    <title>To Test Static File</title>
+    <title>To Test default error page</title>
     <link rel="stylesheet" type="text/css" href="/static/style.css">
 </head>
 <body>
 
-<h1>To Test Static File</h1>
+<h1>Error!</h1>
 
-<img id="logo" src="/static/gcp-gopher.svg" width="100">
-
+<img id="logo" src="/static/error.jpg" width="100">
 </body>
 </html>
